--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp">
 
-    <EditText
-        android:id="@+id/heartRateInput"
+    <TextView
+        android:id="@+id/heartRateDisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Enter Heart Rate"
-        android:inputType="number"/>
-
-    <EditText
-        android:id="@+id/spo2Input"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="Enter SpO2"
-        android:inputType="number"
-        android:layout_below="@id/heartRateInput"/>
+        android:text="Heart Rate will appear here"
+        android:textSize="18sp"/>
 
     <Button
         android:id="@+id/sendButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Send Data"
-        android:layout_below="@id/spo2Input"/>
-</RelativeLayout>
+        android:text="Fetch Heart Rate"/>
+</LinearLayout>
